# cft

./: .gitignore  CMakeLists.txt  Makefile  README.md  ansi_macros.hpp  cmake_tut  config.json  enums.hpp  install.sh  logs.txt  main.cpp  new  new.cpp  server  server.cpp  template.cpp  tsconfig.json
.cache/clangd/index/: animations.hpp.6250E5B1242654F3.idx  cft.hpp.63F337147DE221AB.idx  colors.hpp.F7083BCA7FD2C2DE.idx  enums.hpp.70B35B7954B635F0.idx  file_iterator.hpp.CE1BE1960B0BCE29.idx  init.cpp.74EE13E53F91E081.idx  init.hpp.22448345D1A354E4.idx  judge.cpp.60EA66CB09D0DB25.idx  loader.cpp.C8C333A6FC699BA3.idx  (+7 more)
.github/workflows/: c-cpp.yml
app/: cft  cpcmp  install.sh  main.cpp  server
competitive-companion-support/: README.md  package.json  pnpm-lock.yaml  server.js
handlers/: Init.hpp  Parse.hpp  Tester.hpp
include/cft/: animations.hpp  cft.hpp  colors.hpp  config.hpp  enums.hpp  file_iterator.hpp  init.hpp  parse.hpp  tester.hpp  util.hpp
include/hrszo/: json.hpp
oldbin/: cft
server/: go.mod  package.json  server.js
server/fch/: main.go
server/handlers/: handlers.go
someother/: a.cpp  cl
src/: Init.cpp  Parse.cpp  Tester.cpp  build.cpp  cft  config.hpp  createFiles.cpp  decode.cpp  init.cpp  judge.cpp  loadBin.cpp  loader.cpp  main.cpp  misc.cpp  parse.cpp  runTests.cpp  tester.cpp
testing/: a  a.cpp  cl  new  report.txt
tooling/: Init.hpp  Parse.hpp  Tester.hpp  config.hpp  tools.hpp
tools/: Config.hpp  Init.hpp  Parse.hpp  Tester.hpp  config.hpp  include.hpp
util/: animations.hpp  colors.hpp  include.hpp  misc.cpp  tria  trial.cpp
